<resources>
    <string name="app_name">Meu Posto</string>
    <string name="btLogin">Login</string>
    <string name="title_activity_cadastro">CadastroActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="email">Email</string>
    <string name="combust_vel">Combustível</string>
    <string name="nome">Nome</string>
    <string name="senha">Senha</string>
    <string name="ve_culo">Veículo</string>
    <string name="title_activity_cadastro2">CadastroActivity2</string>
    <string name="communicate">Communicate</string>
    <string name="gallery">Gallery</string>
    <string name="procurar_posto">Procurar Posto</string>
    <string name="send">Send</string>
    <string name="share">Share</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="title_activity_mapa">Map</string>
    <string name="novo_posto">Exemplo Provider</string>
    <string name="bandeira">Bandeira</string>
    <string name="combust_posto">Combustível</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bandeira_posto">Bandeira</string>
    <string name="cadastrar_posto">Cadastrar</string>
    <string name="endere_posto">Endereço</string>
    <string name="nome_posto">Nome</string>
    <string name="lista_bandeiras">Dismiss</string>
    <string name="selecione_a_bandeira"></string>
    <string name="tipo_combustivel">Escolha o tipo de combustivel</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="localizar_postos">Localizar postos</string>
    <string name="novo_posto2">Novo posto</string>
    <string name="postos_cadastrados">Postos cadastrados</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha </string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sair">Sair</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Este email é inválido!</string>
    <string name="error_invalid_password">Esta senha é muito pequena</string>
    <string name="error_incorrect_password">Senha errada</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="permission_rationale">Permissão de contatos  é necessária para ter acesso ao email do seu celular."
    </string>
    <string name="novo_aqui_realize_seu_cadastro">Novo aqui? realize seu cadastro!</string>
    <string name="title_activity_maps">Map</string>
    <string name="novo_por_aqui_realize_seu_cadastro">Novo por aqui? Realize seu cadastro.</string>
    <string name="digite_a_bandeira">Escolha a bandeira</string>
    <string name="digite_o_endereco">Digite o endereco</string>
    <string name="digite_o_nome">Digite o nome</string>
    <string name="localiza_o">Localização</string>
    <string name="pre_os">Preços</string>
    <string name="nomePos">Nome</string>
    <string name="postos_cadastradoss">Postos cadastrados</string>
    <string name="insira_os_pre_os_dos_combust_veis">Insira os preços dos combustíveis</string>
    <string name="adicionar">Adicionar</string>
    <string name="deisel_s10">Deisel S10</string>
    <string name="diesel">Diesel</string>
    <string name="etanol">Etanol</string>
    <string name="gasolina_aditivada">Gasolina Aditivada</string>
    <string name="gasolina">Gasolina</string>

</resources>
