<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="meuposto.br.com.projeto.meuposto.CadastroPostoActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:text="@string/nome_posto"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="19dp"
        app:layout_constraintRight_toLeftOf="@+id/nomePostoId"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="18dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.694" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endere_posto"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:layout_marginStart="25dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/enderecoPostoId"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="22dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bandeira_posto"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="33dp"
        app:layout_constraintBottom_toBottomOf="@+id/bandeiraPosrtoId"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="22dp" />

    <TextView
        android:id="@+id/bandeiraPosrtoId"
        android:layout_width="0dp"
        android:layout_height="37dp"

        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/selecione_a_bandeira"
        android:textSize="18sp"

        android:layout_marginStart="13dp"
        android:layout_marginEnd="2dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/nomePostoId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginEnd="16dp"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        tools:layout_constraintBaseline_creator="1" />

    <EditText
        android:id="@+id/enderecoPostoId"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintRight_toRightOf="@+id/bandeiraPosrtoId"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/nomePostoId"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="49dp"
        app:layout_constraintLeft_toRightOf="@+id/textView3" />


    <Button
        android:id="@+id/botaoCadastrarPostoId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar_posto"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="94dp"
        app:layout_constraintTop_toBottomOf="@+id/bandeiraPosrtoId"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="95dp"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>
